fix: selection was not working propely on safari

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -36,7 +36,17 @@ body {
   min-width: 320px;
   min-height: 100dvh;
   /* Add subtle global radial gradient for depth */
-  background-image: radial-gradient(circle at top center, rgba(30, 80, 80, 0.15) 0%, transparent 60%), radial-gradient(circle at bottom right, rgba(207, 161, 86, 0.05) 0%, transparent 40%);
+  background-image:
+    radial-gradient(
+      circle at top center,
+      rgba(30, 80, 80, 0.15) 0%,
+      transparent 60%
+    ),
+    radial-gradient(
+      circle at bottom right,
+      rgba(207, 161, 86, 0.05) 0%,
+      transparent 40%
+    );
   background-attachment: fixed;
 }
 
@@ -47,4 +57,11 @@ h4,
 h5,
 h6 {
   @apply text-heading font-heading;
+}
+
+select {
+  @apply appearance-none bg-no-repeat pr-10;
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="%23ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevrons-up-down"><path d="m7 15 5 5 5-5"/><path d="m7 9 5-5 5 5"/></svg>');
+  background-size: 16px 16px;
+  background-position: right 0.75rem center;
 }
